Fixed other styles of ServicesSkeleton for too small media.

--- a/src/components/Skeleton/ServicesSkeleton/styles.module.css
+++ b/src/components/Skeleton/ServicesSkeleton/styles.module.css
@@ -89,7 +89,7 @@
   }
 }
 
-@media screen and (min-width: 271px) {
+@media screen and (min-width: 276px) {
   .outerList {
     margin-bottom: 43.93px;
   }
